deployment-agro-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
  namespace: argo-rollouts
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: frontend-rollout
  template:
    metadata:
      labels:
        app: frontend-rollout
    spec:
      containers:
      - name: frontend
        image: napeno/frontend:latest
        ports:
        - name: http
          containerPort: 3100
          protocol: TCP
