agro-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  type: LoadBalancer
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
  selector:
    app.kubernetes.io/name: argo-rollouts
